resolved align-item center issue

--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -9,12 +9,14 @@
   display: flex;
   flex-direction: column;
   width: 380px;
+  margin: 32px;
 }
 
 .right-body {
   display: flex;
   flex-direction: column;
   width: 380px;
+  margin: 32px;
 }
 
 .new-note {
@@ -184,4 +186,16 @@
 .accordion-item:last-of-type .accordion-button.collapsed {
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
+}
+
+@media only screen and (max-width: 400px) {
+  .left-body {
+    margin: 0;
+    width: 360px;
+  }
+
+  .right-body {
+    margin: 0;
+    width: 360px;
+  }
 }
